--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.example.herosapp'
 }
 
 dependencies {
@@ -83,6 +84,7 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
     // OkHttp
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
 
@@ -101,7 +103,7 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.0.0-rc03"
 
     // Compose Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.0-beta01"
+    implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
 
     // Paging 3.0
     implementation 'androidx.paging:paging-compose:1.0.0-alpha14'
